sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:5: error: not found: value NombreValeurs
  val lgr:Int=NombreValeurs()
              ^